<resources>
    <string name="app_name">ShopDB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalogs">Справочники</string>
    <string name="warehouse_operations">Складские операции</string>
    <string name="addresses">Справочник адресов</string>
    <string name="shops">Справочник магазинов</string>
    <string name="departments">Справочник отделов магазина</string>
    <string name="position">Справочник штатных единиц</string>
    <string name="employers">Справочник сотрудников</string>
    <string name="products">Справочник продуктов</string>
    <string name="suppliers">Справочник поставщиков</string>
    <string name="suppliers_price">Справочник цен поставщика</string>
    <string name="sale_price">Справочник цен продажи</string>
    <string name="text_building">Дом:</string>
    <string name="text_street">Улица:</string>
    <string name="text_cty">Город:</string>
    <string name="save">Сохранить</string>
    <string name="shop_name_textView">Название магазина:</string>
    <string name="shop_name_textView_textview">Название магазина:</string>
    <string name="cancel_button">Отмена</string>
    <string name="text_departName">Название отдела:</string>
    <string name="text_fatherDepart">Родительский отдел:</string>
    <string name="text_shopName">Магазин:</string>
    <string name="depart_nameShort_textView">Сокращенное название отдела</string>
    <string name="depart_name_textView">Название отдела</string>
    <string name="text_positionName">Штатная должность</string>
    <string name="text_positionPlaceName">Расположение</string>
    <string name="position_nameShort_textView">Выберите расположение должности:</string>
    <string name="text_employrSurname">Фамилия:</string>
    <string name="text_employrName">Имя:</string>
    <string name="text_middle_name">Отчество:</string>
    <string name="text_employrsPlaceName">Место работы:</string>
    <string name="birthday_edit_date">Выбрать дату рождения</string>
    <string name="text_productName">Название</string>
    <string name="text_productUNIT">Единица измерения:</string>
    <string name="text_productLabel">Производитель</string>
    <string name="productName">Название продукта</string>
    <string name="menu_unit">Единица измерения</string>
    <string name="text_productTitle">Описание</string>
    <string name="add_product_button">Создать продукт</string>
    <string name="suppliers_name_textView">Поставщик:</string>
    <string name="menu_addresses">Адрес:</string>
    <string name="text_suppliersName">Поставщик:</string>
    <string name="text_nameProduct">Продукт:</string>
    <string name="text_unitProduct">Цена:</string>
    <string name="text_price_data">Дата:</string>
    <string name="menu_product">Продукт</string>
    <string name="text_sale_price_date">Дата начала действия:</string>
    <string name="text_supply_name">Поставщик:</string>
    <string name="add_supply_price">Создать</string>
    <string name="text_supply_price">Цена:</string>
    <string name="menu_supply">Поставщик</string>
    <string name="sale">Продажи</string>
    <string name="supply">Поставка товара</string>
    <string name="supply_num">Номер поставки:</string>
    <string name="product_quantity">Количество продуктов:</string>
    <string name="order_quantity">Сумма заказа:</string>
    <string name="quantity_date">Дата заказа:</string>
    <string name="add_supply">Создать</string>
    <string name="to_add_product">Добавить</string>
    <string name="text_quantity">Количество:</string>
    <string name="text_price_data_add_supply">Сумма по продукту:</string>
    <string name="text_add_supply_name">Количество:</string>
    <string name="text_product_count">Количество:</string>
    <string name="sale_num">Номеп продажи:</string>
    <string name="add_sale">Продать</string>
</resources>