<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".AddAddressesFragment">

    <TextView
        android:id="@+id/city_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_cty" />

    <EditText
        android:id="@+id/city_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/street_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_street" />

    <EditText
        android:id="@+id/street_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/building_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_building" />

    <EditText
        android:id="@+id/building_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/add_Addresses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>