<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".AddPositionFragment">

    <TextView
        android:id="@+id/position_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_positionName" />

    <EditText
        android:id="@+id/position_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/position_nameShort_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_nameShort_textView" />

    <Spinner
        android:id="@+id/spinner_positions"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/add_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>