<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_list_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <TextView
        android:id="@+id/text_add_supply_nameProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_nameProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_price_data_add_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_price_data_add_supply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add_supply_nameProduct" />

    <TextView
        android:id="@+id/text_add_supply_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_add_supply_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_price_data_add_supply" />

    <TextView
        android:id="@+id/value_nameProduct_add_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_price_data_add_supply"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_price_data_add_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_price_data_add_supply"
        app:layout_constraintTop_toBottomOf="@+id/value_nameProduct_add_supply" />

    <TextView
        android:id="@+id/value_add_supply_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_price_data_add_supply"
        app:layout_constraintTop_toBottomOf="@+id/value_price_data_add_supply" />


</androidx.constraintlayout.widget.ConstraintLayout>