<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_list_items"
    android:padding="8dp">


    <ImageView
        android:id="@+id/delete_sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete_icon"
        tools:ignore="ContentDescription" />



    <TextView
        android:id="@+id/sale_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sale_num"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sale_num" />

    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_quantity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_date" />


    <TextView
        android:id="@+id/order_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/order_quantity"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity" />

    <TextView
        android:id="@+id/value_sale_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/delete_sale_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_sale_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/delete_sale_button"
        app:layout_constraintTop_toBottomOf="@+id/value_sale_num" />

    <TextView
        android:id="@+id/value_product_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/value_sale_date"
        app:layout_constraintEnd_toStartOf="@+id/delete_sale_button"/>

    <TextView
        android:id="@+id/value_order_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/delete_sale_button"
        app:layout_constraintTop_toBottomOf="@+id/value_product_sale" />


</androidx.constraintlayout.widget.ConstraintLayout>